@@ -358,6 +358,8 @@ issues you find at
 </li>
 <li>[<a href='https://issues.apache.org/jira/browse/UIMA-520'>UIMA-520</a>] -         Calling CasCreationUtils to produce a custom resource is ignoring the passed in ResourceManager in some cases
 </li>
+<li>[<a href='https://issues.apache.org/jira/browse/UIMA-522'>UIMA-522</a>] -         XMI Serialization fails for parameterized arrays
+</li>
 </ul>
     
 <h2>        Improvement
@@ -479,8 +481,11 @@ issues you find at
 </li>
 <li>[<a href='https://issues.apache.org/jira/browse/UIMA-473'>UIMA-473</a>] -         Update README and RELEASE_NOTES
 </li>
+<li>[<a href='https://issues.apache.org/jira/browse/UIMA-521'>UIMA-521</a>] -         Add LICENSE, DISCLAIMER, and NOTICES files to source jars produced by Maven
+</li>
+<li>[<a href='https://issues.apache.org/jira/browse/UIMA-524'>UIMA-524</a>] -         Prepare for distribution of UIMA artifacts in Maven repository
+</li>
 </ul>
-            
-            
+                        
 </body>
 </html>
